Delphi/Lib/XCGUI.pas

procedure XEle_ShowEle (hEle:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
function XEle_GetType (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetHWND (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetHWINDOW (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetCursor (hEle:Integer;hCursor:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetCursor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetID (hEle:Integer;id:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetID (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetParentEle (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetParent (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetTextColor (hEle:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XEle_GetTextColor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetFocusBorderColor (hEle:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XEle_GetFocusBorderColor (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetFont (hEle:Integer;hFontx:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetFont (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetAlpha (hEle:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XEle_GetChildCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildByIndex (hEle:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildByID (hEle:Integer;id:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildShapeCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetChildShapeByIndex (hEle:Integer;index:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_HitChildEle (hEle:Integer;pPt:TPOINT) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_BindLayoutObject (hEle:Integer;hLayout:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetLayoutObject (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetParentLayoutObject (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_SetUserData (hEle:Integer;nData:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetUserData (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_GetContentSize (hEle:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
procedure XEle_SetCapture (hEle:Integer;b:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_SetLayoutWidth (hEle:Integer;nType:Integer;nWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_SetLayoutHeight (hEle:Integer;nType:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_GetLayoutWidth (hEle:Integer;pType:Integer;pWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_GetLayoutHeight (hEle:Integer;pType:Integer;pHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_RedrawEle (hEle:Integer;bImmediate:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_RedrawRect (hEle:Integer;pRect:TRECT;bImmediate:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_Destroy (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_AddBkBorder (hEle:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_AddBkFill (hEle:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XEle_AddBkImage (hEle:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XEle_ClearBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XEle_GetBkInfoManager (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_GetStateFlags (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XEle_DrawFocus (hEle:Integer;hDraw:Integer;pRect:TRECT) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XEle_EnableTransparentChannel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_SetToolTip (hEle:Integer;pText:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XEle_GetToolTip (hEle:Integer;pOut:PWideChar;nOutLen:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_EnableToolTip (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XEle_AdjustLayoutObject (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XEle_AdjustLayout (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XEle_RegEventTest (nEvent:Integer;pParamType:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XFont_Create (size:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_Create2 (pName:PWideChar;size:Integer;bBold:LongBool;bItalic:LongBool;bUnderline:LongBool;bStrikeOut:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_CreateEx (pFontInfo:TLOGFONTW) : Integer;stdcall;far; external 'xcgui.dll';
function XFont_CreateFromHFONT (hFont:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XFont_EnableAutoDestroy (hFontX:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XFont_Destroy (hFontX:Integer);stdcall;far; external 'xcgui.dll';
function XFont_GetHFONT (hFontX:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFrameWnd_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;pTitle:PWideChar;hWndParent:Integer;XCStyle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XFrameWnd_CreateEx (dwExStyle:Integer;lpClassName:PWideChar;lpWindowName:PWideChar;dwStyle:Integer;x:Integer;y:Integer;cx:Integer;cy:Integer;hWndParent:Integer;XCStyle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XFrameWnd_GetLayoutAreaRect (hWindow:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XFrameWnd_SetView (hWindow:Integer;hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XFrameWnd_SetPaneSplitBarColor (hWindow:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XFrameWnd_AddPane (hWindow:Integer;hPaneDest:Integer;hPaneNew:Integer;align:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XFrameWnd_MergePane (hWindow:Integer;hPaneDest:Integer;hPaneNew:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_LoadFile (pImageName:PWideChar;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileAdaptive (pImageName:PWideChar;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileRect (pImageName:PWideChar;x:Integer;y:Integer;cx:Integer;cy:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadResAdaptive (id:Integer;pType:PWideChar;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadRes (id:Integer;pType:PWideChar;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadZip (pZipFileName:PWideChar;pImageName:PWideChar;pPassword:PWideChar;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadZipAdaptive (pZipFileName:PWideChar;pImageName:PWideChar;pPassword:PWideChar;x1:Integer;x2:Integer;y1:Integer;y2:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadZipRect (pZipFileName:PWideChar;pImageName:PWideChar;pPassword:PWideChar;x:Integer;y:Integer;cx:Integer;cy:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadMemory (pBuffer:Integer;nSize:Integer;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadMemoryRect (pBuffer:Integer;nSize:Integer;x:Integer;y:Integer;cx:Integer;cy:Integer;bStretch:LongBool) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadMemoryAdaptive (pBuffer:Integer;nSize:Integer;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFromImage (pImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileFromExtractIcon (pImageName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileFromHICON (hIcon:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_LoadFileFromHBITMAP (hBitmap:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_IsStretch (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_IsAdaptive (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_IsTile (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_SetDrawType (hImage:Integer;nType:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_SetDrawTypeAdaptive (hImage:Integer;leftSize:Integer;topSize:Integer;rightSize:Integer;bottomSize:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XImage_SetTranColor (hImage:Integer;color:Integer);stdcall;far; external 'xcgui.dll';
procedure XImage_SetTranColorEx (hImage:Integer;color:Integer;tranColor:Byte);stdcall;far; external 'xcgui.dll';
function XImage_SetRotateAngle (hImage:Integer;fAngle:real) : real;stdcall;far; external 'xcgui.dll';
procedure XImage_EnableTranColor (hImage:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XImage_EnableAutoDestroy (hImage:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XImage_EnableCenter (hImage:Integer;bCenter:LongBool);stdcall;far; external 'xcgui.dll';
function XImage_IsCenter (hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XImage_GetDrawType (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_GetWidth (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XImage_GetHeight (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XImage_Release (hImage:Integer);stdcall;far; external 'xcgui.dll';
procedure XImage_Destroy (hImage:Integer);stdcall;far; external 'xcgui.dll';
function _Image_AddRef (hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure _Image_Release (hImage:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_Create () : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_Destroy (hLayout:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_AddEle (hLayout:Integer;hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_AddLayoutObject (hLayout:Integer;hLayoutObject:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_AddShape (hLayout:Integer;hShape:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_RemoveChild (hLayout:Integer;hChild:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_AdjustLayout (hLayout:Integer);stdcall;far; external 'xcgui.dll';
procedure XLayout_SetRectFrame (hLayout:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetRect (hLayout:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XLayout_GetRectFrame (hLayout:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
function XLayout_GetWindow (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetEle (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetParentLayout (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XLayout_GetParent (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XLayout_SetID (hLayout:Integer;nID:Integer);stdcall;far; external 'xcgui.dll';
function XLayout_GetID (hLayout:Integer) : Integer;stdcall;far; external 'xcgui.dll';
